<resources>
    <string name="app_name">Ranking Szachowy</string>
    <string name="newsTitle_recentGamesFragment">News</string>
    <string name="news_recentGamesFragment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.      Duis vulputate commodo lectus, ac blandit elit tincidunt id.      Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</string>
    <string name="playersHeader_fragment">Players</string>
    <string name="tournamentHeader_fragment">Tournament</string>
    <string name="dateHeader_fragment">Date</string>
    <string name="lastGameHeader_fragment">Last Game</string>
    <string name="current_tournaments_title">Current Tournament</string>
    <string name="open_tournaments_tab">Open</string>
    <string name="closed_tournaments_tab">Closed</string>
    <string name="finished_tournaments_tab">Finished</string>
    <string name="startDateHeader_tab">Starts</string>
    <string name="playersInvitedHeader_tab">Players Invited</string>
    <string name="tournamentEndedHeader_tab">Ended</string>
    <string name="winnerHeader_tab">Winner</string>
    <string name="addGameTitle_fragment">Add Game</string>
    <string name="sideWhite">White</string>
    <string name="sideBlack">Black</string>
    <string name="winResult_text_addgame_fragment">Game Result</string>
    <string name="moveWhite_addgame_fragment">Move White</string>
    <string name="moveBlack_addgame_fragment">Move Black</string>
    <string name="addMove_addgame_fragment">Add</string>
    <string name="removeMove_addgame_fragment">Remove</string>
    <string name="addMoveHeader_fragment">Moves List</string>
    <string name="btn_confirm">Confirm</string>
    <string name="nameOp_placeholder_fragment">Opponent Name</string>
    <string name="userName_placeholder">Username</string>
    <string name="createTournament_btn">Create New</string>
    <string name="createTournament_title_fragment">Create Tournament</string>
    <string name="description_title_fragment">Description</string>
    <string name="playersCap_addtournament_fragment">Players Cap</string>
    <string name="tournamentType_title_fragment">Tournament Type:</string>
    <string name="tournamentType_open_fragment">Everyone can join</string>
    <string name="tournamentType_closed_fragment">Invites Only</string>
    <string name="startsAt_title_fragment">Starts At:</string>
    <string name="invite_button_createTournament_fragment">Invite</string>
    <string name="playerInvited_header">Player Invited</string>
    <string name="playerConfirmed_header_createTournament">Confirmed</string>
    <string name="playerProfile_title_fragment">Player Profile</string>
    <string name="rank_playerProfile_fragment">Rank</string>
    <string name="lastGame_playerProfile_fragment">Last Played</string>
    <string name="playingSince_playerProfile_fragment">Playing Since</string>
    <string name="age_playerProfile_fragment">Age</string>
    <string name="achivements_title_playerProfile">Achievements</string>
    <string name="gamesHistory_playerProfile_title">Games History</string>
    <string name="edit_playerProfile_btn_fragment">Edit</string>
    <string name="addImage_playerProfile_fragment">Add Image</string>
    <string name="placementHeader_playerProfile_fragment">Placement</string>
    <string name="search_title_fragment">Search</string>
    <string name="searchOptions_btn">Search Options</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <array name="SearchOptions"><item>Players</item><item>Games</item><item>Tournaments</item></array>
    <array name="GameResults"><item>Win</item><item>Lose</item></array>
</resources>
