<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/addGameTitle_fragment"
                android:textAlignment="center"
                android:textColor="@color/primaryTextLight"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTournament"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/userName_placeholder"
                    android:textColor="@color/primaryTextDark"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerTournament"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textColor="@color/primaryTextDark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/nameOp_placeholder_fragment"
                    android:inputType="textPersonName"
                    android:textColor="@color/primaryTextDark"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerOpponent"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textColor="@color/primaryTextDark" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvGameResult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/winResult_text_addgame_fragment"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/primaryTextDark"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerGameResult"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textColor="@color/primaryTextDark" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAddGameDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dateHeader_fragment"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/primaryTextDark"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerAddGameDate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textColor="@color/primaryTextDark" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/userName_placeholder"
                    android:textColor="@color/primaryTextDark"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerPlayer"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textColor="@color/primaryTextDark" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etMoveWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/moveWhite_addgame_fragment"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textColor="@color/primaryTextDark" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/moveBlack_addgame_fragment"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textColor="@color/primaryTextDark" />

                <Button
                    android:id="@+id/btnAddMoveGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/addMove_addgame_fragment"
                    android:textColor="@color/primaryTextDark" />

                <Button
                    android:id="@+id/btnRemoveMoveGame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/removeMove_addgame_fragment"
                    android:textColor="@color/primaryTextDark" />
            </LinearLayout>

            <TableLayout
                android:id="@+id/tblMovesListAddGame"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableLayout>

            <Button
                android:id="@+id/btnConfirmGame"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_confirm"
                android:textColor="@color/primaryTextDark" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>