<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="214dp"
                    android:layout_height="wrap_content"
                    android:text="@string/createTournament_title_fragment"
                    android:textAlignment="center"
                    android:textColor="@color/primaryTextLight"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnConfirmTournament"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/btn_confirm" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="Name"
                        android:textColor="@color/primaryTextDark" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="Name"
                        android:textColor="@color/primaryTextDark" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_title_fragment"
                android:textAlignment="center"
                android:textColor="@color/primaryTextDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textColor="@color/primaryTextDark" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="159dp"
                    android:layout_height="match_parent"
                    android:text="@string/playersCap_addtournament_fragment"
                    android:textColor="@color/primaryTextDark" />

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="10"
                    android:inputType="numberSigned"
                    android:textColor="@color/primaryTextDark" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tournamentType_title_fragment"
                android:textColor="@color/primaryTextDark" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:allowUndo="false"
                android:checked="true"
                android:text="@string/tournamentType_open_fragment"
                android:textColor="@color/primaryTextDark" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tournamentType_closed_fragment"
                android:textColor="@color/primaryTextDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="159dp"
                    android:layout_height="match_parent"
                    android:text="@string/startsAt_title_fragment"
                    android:textColor="@color/primaryTextDark" />

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="date"
                    android:textColor="@color/primaryTextDark" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/primaryTextDark" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invite_button_createTournament_fragment"
                android:textAlignment="center"
                android:textColor="@color/primaryTextDark" />

            <TableLayout
                android:id="@+id/tblPlayerInvitesCreateTournament"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightPrimary"
                android:textColor="@color/primaryTextDark">

            </TableLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>